Bug 128700 - Fileopen DOC: table content from header not shown due to table width
Summary: Fileopen DOC: table content from header not shown due to table width
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0 all versions
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.5.0 target:6.4.0.1 target:6.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-11-10 16:38 UTC by Timur
Modified: 2019-11-18 12:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
DOC created in MSO (70.00 KB, application/msword)
2019-11-10 16:38 UTC, Timur
Details
DOCX created in MSO (27.96 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-11-10 16:39 UTC, Timur
Details
DOC and DOCX compared in MSO and LO (90.01 KB, image/jpeg)
2019-11-10 16:40 UTC, Timur
Details
90124 example1 header MSOc.doc: wrap-none simplified version (65.50 KB, application/msword)
2019-11-14 07:21 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2019-11-10 16:38:10 UTC
Created attachment 155677 [details]
DOC created in MSO

Table content from header (and/or footer, same in MSO) not shown for attached DOC.
Table seems to be imported. 
(Table is wrap around floating table, but result is the same with wrap none.)

Reason may be relative width of 5% in LO. If changed to 100%, content is seen.
Result of Preferred width of 5,6% in MSO.

Tested with LO 6.4+ and 6.2. 
Content was seen in 5.4 as in 4.4 from previous bug, but not correctly.
So there was a change somewhere, could be useful to bibisect but I won't mark regression.
Comment 1 Timur 2019-11-10 16:39:08 UTC
Created attachment 155678 [details]
DOCX created in MSO

Opens better.
Comment 2 Timur 2019-11-10 16:40:14 UTC
Created attachment 155679 [details]
DOC and DOCX compared in MSO and LO

As explained, there was a change in opening DOC.
Comment 3 Xisco Faulí 2019-11-11 12:04:43 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e69473539a33da5450d3878999eba7f9bfb9e631

author	Justin Luth <justin_luth@sil.org>	2017-09-28 18:22:08 +0300
committer	Justin Luth <justin_luth@sil.org>	2017-10-11 19:42:40 +0200
commit e69473539a33da5450d3878999eba7f9bfb9e631 (patch)
tree 35da212cc7e0fd1538b93b5e0a1fb09d01ed8b96
parent bb1a1e367e049d8f2ea30187b329d370bfd2c6ef (diff)
tdf#55528 ww8import: import table width percent

Bisected with: bibisect-linux64-6.0

Adding Cc: to Justin Luth
Comment 4 Justin L 2019-11-14 07:08:41 UTC
proposed fix for relative width at https://gerrit.libreoffice.org/82647
Comment 5 Justin L 2019-11-14 07:21:23 UTC
Created attachment 155797 [details]
90124 example1 header MSOc.doc: wrap-none simplified version

Although the results seem similar, the hidden text in this case is not caused by relative width settings.

The problem in this case sounds like bug 117982's "FILEOPEN DOCX: Text in a table is invisible due to spacing and row height".
Comment 6 Commit Notification 2019-11-15 08:10:51 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b58b78f5275aedbc8904b8dd5cf2f54919da7c8a

tdf#128700 ww8import: no relative width table if made into a fly

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-11-15 18:40:27 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/e13cebf480373f17c9161f17ebaed0286a72ca1f

tdf#128700 ww8import: no relative width table if made into a fly

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2019-11-18 09:26:35 UTC
Verified in

Version: 6.4.0.0.beta1+
Build ID: c2097477e3a43d75c170a6f7a5daf5dcb2169329
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Justin Luth, thanks for fixing this issue!
Comment 9 Commit Notification 2019-11-18 09:28:25 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/cd77ab93b0f8e629c12d1b46d1be86e67dc93f0f

tdf#128700 ww8import: no relative width table if made into a fly

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Timur 2019-11-18 12:05:23 UTC
Thanks, Justin. Looks better than before "regression". 

Spacing from table to the right looks none opening DOC and smaller than MSO opening DOCX.
I guess it's another issue, related to header/footer and margins. 
Unless margin is smaller, MSO positions table to start from the right margin (that's 2,5 cm in MSO).