tdf#128700 ww8import: no relative width table if made into a fly

This is a partial revert for LO 6.0's tdf#55528 commit
e69473539a33da5450d3878999eba7f9bfb9e631

Apparently Word tables can float without a frame, but in LO they
need to wrapped in a frame? The relative size is supposed to be
relative to the container they are in - so floated tables must
not be assigned a relative value - otherwise the tablesize becomes
relative to the custom frame that was created to float it.

The fix was easy to make, but then trying to figure out whether
to test using InLocalApo(), or just m_xSFlyPara took a lot of time.
The documentation is sparse and unclear. In the end I settled on
ignoring relative width if pFlyFormat exists, since certain
conditions can cancel (bNoFly) a FloatingTableConversion.

I tested what happens if a real frame is created and then a
relatively sized table is dropped inside. I confirmed that relative
SHOULD be relative to the frame. That case still works fine
since it isn't considered an x_sFlyPara - I think because it actually
is a textbox that the table is anchored onto. LO round-trips
frame/table as textbox/table.

Conclusion: tables inside of frames/textboxes MAY be relative,
but if the table itself is floating (a WORD-ONLY feature)
then it should not be relatively sized.

Change-Id: I2b0bd525051a33b5606b79d2b26665d3edeb5357
Reviewed-on: https://gerrit.libreoffice.org/82647
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit b58b78f5275aedbc8904b8dd5cf2f54919da7c8a)
Reviewed-on: https://gerrit.libreoffice.org/82762
(cherry picked from commit e13cebf480373f17c9161f17ebaed0286a72ca1f)
Reviewed-on: https://gerrit.libreoffice.org/82818
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>